Fix card vertical stretching

--- a/app/assets/stylesheets/agents.scss
+++ b/app/assets/stylesheets/agents.scss
@@ -5,7 +5,6 @@
 
 /* TODO
 *   - tekstit skaalaa
-*   - cardit ei veny alas
 */
 
 .screen_background {
@@ -24,6 +23,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-grow: 1;
+  align-content: flex-start;
+  align-items: flex-start;
 }
 
 .agent-card {
